# Cosmos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.pt-BR.md  TODO.md  imgui.ini
assets/textures/: README.md
assets/textures/dark_ages/: gas_splat_profile.pgm  volume_macro_lookup.pgm
assets/textures/reionization/: star_glow_profile.pgm  volume_macro_lookup.pgm
assets/textures/structure/: volume_macro_lookup.pgm
docs/: blender-workflow.md  blender-workflow.pt-BR.md
src/: main.cpp  shader_preview_main.cpp
src/core/: Camera.cpp  Camera.hpp  CosmicClock.cpp  CosmicClock.hpp  CpuFeatures.hpp  RegimeConfig.hpp  RegimeManager.cpp  RegimeManager.hpp  SimulationRandom.cpp  SimulationRandom.hpp  Telemetry.cpp  Telemetry.hpp  Universe.cpp  Universe.hpp
src/physics/: Constants.hpp  FluidGrid.cpp  FluidGrid.hpp  Friedmann.cpp  Friedmann.hpp  Hadronization.cpp  Hadronization.hpp  NBody.cpp  NBody.hpp  NBody_avx.cpp  NuclearNetwork.cpp  NuclearNetwork.hpp  ParticlePool.cpp  ParticlePool.hpp  QcdColor.hpp  ThreadPool.hpp
src/prototypes/: DOTSPrototype.cpp  DOTSPrototype.hpp
src/regimes/: IRegime.hpp  RegimeInflation.cpp  RegimeInflation.hpp  RegimeNucleosynthesis.cpp  RegimeNucleosynthesis.hpp  RegimePlasma.cpp  RegimePlasma.hpp  RegimeQGP.cpp  RegimeQGP.hpp  RegimeStructure.cpp  RegimeStructure.hpp
src/render/: AssetTextureUtils.hpp  FilamentRenderer.cpp  FilamentRenderer.hpp  GasSplatRenderer.cpp  GasSplatRenderer.hpp  ICosmicRenderer.cpp  ICosmicRenderer.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  PostProcess.cpp  PostProcess.hpp  RegimeOverlay.cpp  RegimeOverlay.hpp  Renderer.cpp  Renderer.hpp  StarFormationFX.cpp  StarFormationFX.hpp  StarGlowRenderer.cpp  StarGlowRenderer.hpp  StromgrenRenderer.cpp  StromgrenRenderer.hpp  VolumeRenderer.cpp  VolumeRenderer.hpp
src/shaders/: bloom_blur.frag  bloom_threshold.frag  filament.frag  filament.vert  gas_splat.frag  gas_splat.vert  inflation.frag  particle.frag  particle.vert  quad.vert  star_formation.frag  star_formation.vert  star_glow.frag  star_glow.vert  stromgren.frag  stromgren.vert  tonemap.frag  volume.frag  volume.vert
src/shaders/blender/: cosmos.blend  cosmos.blend1
tools/blender/: generate_volume_macro_lookup.py
